LUGG-138 : Fixing sidebar styling issue where there was too much padding

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -719,9 +719,6 @@ aside section {
 
 /*////////////////////////////////////*/
 /* Sidebar */
-aside {
-    padding-top: 20px;
-}
 
 aside .block-title,
 .zone-postscript .block h2.block-title {
